# Mecanum-Wheel-Robot

./: README.md
CAD_MODEL/Track/: add_sidewalk.SLDPRT  additive_to_track.SLDPRT  lane_track_01.SLDASM  track.SLDPRT  ~$Track_01.SLDASM
CAD_MODEL/Track/urdf_40/: Track_01.xacro  Track_02.xacro
CAD_MODEL/Track/urdf_40/Track_01/: package.xml
CAD_MODEL/Track/urdf_40/Track_01/launch/: gazebo.launch
CAD_MODEL/Track/urdf_40/Track_01_meshes/: Back_Track.STL  Front_Track.STL  Front_lane.STL
CAD_MODEL/Track/urdf_40/Track_02/meshes/: Back_lane.STL  obstacle_2.STL
CAD_MODEL/Track/urdf_40/Track_02/urdf/: Track_02.urdf
CAD_MODEL/Track/urdf_40/Track_02_meshes/: Back_Track.STL  Front_lane.STL  Track_lane.STL  obstacle_1.STL
CAD_MODEL/Track/urdf_80/Track_01/meshes/: BST.STL  Back_lane.STL  FST.STL  Front_lane.STL  sidewalk.STL
CAD_MODEL/Track/urdf_80/Track_01/urdf/: Track_01.csv  Track_01.urdf
CAD_MODEL/Track/urdf_80/Track_02/: package.xml
CAD_MODEL/Track/urdf_80/Track_02/launch/: display.launch
CAD_MODEL/Track/urdf_80/Track_02/meshes/: Front_Track.STL  Front_lane.STL  sidewalk.STL
CAD_MODEL/solid_gazeo/: 12085_buzzer.step.SLDPRT  BASE_PLATE.SLDPRT  Battry_Pulse6Cell_22A.SLDPRT  Bettary Holder.SLDPRT  Cover.SLDPRT  ESP32-S.SLDPRT  GY87_10DOF_IMU.SLDPRT  IMU HOLDER.SLDPRT  Lidar.SLDPRT  Mecanum wheel - left.SLDPRT  Mecanum wheel - right.SLDPRT  Moteur JGA25-370 12V 280RPM.SLDPRT  Motor Driver  L298N.SLDPRT  PCB.SLDPRT  Sec_plate.SLDPRT  Support.SLDPRT  battery pack2.SLDPRT  esp32 cam with 2 part box.SLDPRT  shaft.SLDPRT  support moteur little.SLDPRT
CAD_MODEL/solid_gazeo/urdf/MECNUMROBOT/: CMakeLists.txt  package.xml
CAD_MODEL/solid_gazeo/urdf/MECNUMROBOT/config/: joint_names_MECNUMROBOT.yaml
CAD_MODEL/solid_gazeo/urdf/MECNUMROBOT/launch/: display.launch  gazebo.launch
CAD_MODEL/solid_gazeo/urdf/MECNUMROBOT/meshes/: camera.STL  front_right_wheel.STL  lidar.STL
CAD_MODEL/solid_gazeo/urdf/MECNUMROBOT/urdf/: MECNUMROBOT.csv  MECNUMROBOT.urdf
Track/: Track_01.SLDASM  Track_02.SLDASM  lane.SLDPRT  lane_addetive.SLDASM  obstacle_1.SLDPRT  obstacle_2.SLDPRT  sidewalk.SLDPRT
Track/urdf_40/Track_01/meshes/: Back_lane.STL  Track_lane.STL
Track/urdf_40/Track_01/urdf/: Track_01.csv  Track_01.urdf
Track/urdf_40/Track_01_meshes/: Track_link.STL
Track/urdf_40/Track_02/: CMakeLists.txt
Track/urdf_40/Track_02/meshes/: Track_link.STL
Track/urdf_40/Track_02/urdf/: Track_02.csv
Track/urdf_40/Track_02_meshes/: Front_Track.STL
Track/urdf_80/Track_01/: CMakeLists.txt
Track/urdf_80/Track_01/launch/: display.launch
Track/urdf_80/Track_01/meshes/: Back_Track.STL  Front_Track.STL
Track/urdf_80/Track_02/launch/: gazebo.launch
Track/urdf_80/Track_02/meshes/: Back_Track.STL  Back_lane.STL  Track_link.STL
Track/urdf_80/Track_02/urdf/: Track_02.csv  Track_02.urdf
src/mec/: CMakeLists.txt  package.xml
src/mec/config/: driver.yaml  mecanum_controllers.yaml
src/mec/launch/: robot_track_01.launch.py  robot_track_02.launch.py  xac_classic.launch.py
src/mec/meshes/: front_left_wheel.STL  imu.STL  rear_left_wheel.STL  rear_right_wheel.STL
src/mec/meshes/Track_01/: Track_lane.STL  Track_link.STL
src/mec/meshes/Track_02/: BST.STL  FST.STL  Track_lane.STL  obstacle_1.STL  obstacle_2.STL
src/mec/model/: Track_01.xacro  Track_02.xacro  all.urdf.xacro  all_robot.urdf.xacro  base.xacro  camera.xacro  driver.xacro  gazebo.xacro  imu.xacro  lidar.xacro  mec_robot.ros2_control.xacro  wheel_joints.xacro
src/mec/new_launch/: driver.launch.py  driver_Track01.launch.py  driver_Track02.launch.py  perception.launch.py  world_Track_01.launch.py  world_Track_02.launch.py
src/mec/rviz/: new.rviz
src/mec/scripts/: driver_node.py  encoder_node.py  imu.py  lane_detection_node.py  lidar_filter.py  mecanum_motion.py  move_node.py  obstacle_Detection_Node.py  odom_node.py  pid_node.py  scenario_01.py  scenario_02.py
src/mec/src/plugins/: mecanum_lateral_plugin.cpp
src/mec/worlds/: Track_01.world  Track_02.world  new.world
