<?xml version="1.0"?>
<package format="3">
  <name>mec</name>
  <version>0.0.0</version>
  <description>Mecanum robot package supporting both Ignition and classic Gazebo</description>
  <maintainer email="musaelshenawy5@gmail.com">musa</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Classic Gazebo dependencies -->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>joint_state_broadcaster</build_depend>
  <build_depend>mecanum_drive_controller</build_depend>
  <build_depend>ros2_controllers</build_depend>

  <!-- Ignition Gazebo dependencies -->
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>ros_gz_bridge</build_depend>
  <build_depend>ros_ign_bridge</build_depend>

  <!-- Exec dependencies -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- Classic Gazebo exec dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <!-- Ignition Gazebo exec dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
